--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -42,5 +42,5 @@ title: Media coverage
 - <a href="https://x.com/reynoirdlab" "style="color:DARKSLATEGRAY;"> X / Twitter </a><hr>
 - <a href="https://www.linkedin.com/in/nicolas-reynoird-06a4375/" "style="color:DARKSLATEGRAY;"> Linkedin </a><hr>
 - <a href="https://iab-grenoble.fr/en/recherche/equipes/dynamique-de-la-methylation-des-proteines-dans-le-cancer" "style="color:DARKSLATEGRAY;"> IAB website </a><hr>
-- <a href="https://reynoird-lab.github.io/" "style="color:DARKSLATEGRAY;"> Reynoird lab website </a></p> <hr>
+- <a href="https://reynoird-lab.github.io/" "style="color:DARKSLATEGRAY;"> Reynoird lab website </a></p>
 	 <hr>
