--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -10,16 +10,19 @@ title: Media coverage
   <p align="justify"> Dr Reynoird was interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/logo_cnrs.jpg" title="CNRS" width="100" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://www.cnrs.fr/fr/presse/traitement-du-cancer-du-sein-agressif-decouverte-dune-nouvelle-proteine-participant-au" "style="color:DARKSLATEGRAY;"> Traitement du cancer du sein agressif : Découverte d’une nouvelle protéine participant au développement de métastases </a> </p>
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by CNRS (in french) here : <a href="https://www.cnrs.fr/fr/presse/traitement-du-cancer-du-sein-agressif-decouverte-dune-nouvelle-proteine-participant-au" "style="color:DARKSLATEGRAY;"> Traitement du cancer du sein agressif : Découverte d’une nouvelle protéine participant au développement de métastases </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" title="INSERM" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by INSERM (in french) here : <a href="https://www.inserm.fr/actualite/cancer-du-sein-une-piste-pour-bloquer-la-formation-de-metastases/" "style="color:DARKSLATEGRAY;"> Cancer du sein : une piste pour bloquer la formation de métastases </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/FRM.jpg" title="FRM" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by the fondation pour la recherche médicale (FRM) and for once, they acknowledge Alexandre Casanova for his work (in french) : <a href="https://www.frm.org/fr/projets/cancer-du-sein-decouverte-nouvelle-proteine-qui-participe-au-developpement-de-metastases" "style="color:DARKSLATEGRAY;"> Cancer du sein : découverte d’une nouvelle protéine qui participe au développement de métastases </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/ARC.png" title="ARC" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by the fondation ARC (in french) here : <a href="https://www.fondation-arc.org/pour-lutter-contre-les-cancers-du-sein-avances-deux-pistes-originales" "style="color:DARKSLATEGRAY;"> Pour lutter contre les cancers du sein avancés, deux pistes originales </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/France2.jpg" title="France 2" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Our work on SMYD2 and breast cancer metastasis was highlighted by France 2 (in french)</p>
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis was highlighted by France 2 (in french), without any proper reference to the lab...</p>
 	<iframe width="560" height="315" src="//embed.francetv.fr/ef2921c64158e2b9412954c055565b8f" frameborder="0" scrolling="no" allowfullscreen></iframe>
 	<hr> 
 <img src="https://reynoird-lab.github.io/Images/FranceInfo.png" title="France Info" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
@@ -29,11 +32,11 @@ title: Media coverage
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by EUROPE 1 (in french) here : <a href="https://www.europe1.fr/sante/prevenir-lapparition-des-metastases-le-cnrs-fait-une-decouverte-capitale-pour-lutter-contre-le-cancer-du-sein-4228082" "style="color:DARKSLATEGRAY;"> Prévenir l'apparition des métastases», le CNRS fait une découverte capitale pour lutter contre le cancer du sein </a> </p>
 	<iframe width="560" height="315" src="https://geo.dailymotion.com/player.html?video=x8rxy92" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <hr>
-<img src="https://reynoird-lab.github.io/Images/France3.jpg" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+<img src="https://reynoird-lab.github.io/Images/France3.jpg" title="France 3" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://france3-regions.francetvinfo.fr/auvergne-rhone-alpes/isere/grenoble/cancer-du-sein-un-laboratoire-de-grenoble-fait-une-decouverte-importante-dans-le-developpement-des-metastases-2916438.html" "style="color:DARKSLATEGRAY;"> Cancer du sein : un laboratoire de Grenoble fait une découverte importante dans le développement des métastases </a> </p>
 	<hr>
 <img src="https://Reynoird-lab.github.io/Images/Santemag.jpg" title="Santé magazine" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://www.santemagazine.fr/actualites/actualites-sante/cancer-du-sein-une-nouvelle-proteine-participant-au-developpement-de-metastases-decouverte-1055720" "style="color:DARKSLATEGRAY;"> Cancer du sein : des chercheurs découvrent une nouvelle protéine participant au développement de métastases </a> </p>
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by Santé magasine (in french) here : <a href="https://www.santemagazine.fr/actualites/actualites-sante/cancer-du-sein-une-nouvelle-proteine-participant-au-developpement-de-metastases-decouverte-1055720" "style="color:DARKSLATEGRAY;"> Cancer du sein : des chercheurs découvrent une nouvelle protéine participant au développement de métastases </a> </p>
 	<hr>
 
 
