--- a/People/index.html
+++ b/People/index.html
@@ -17,7 +17,7 @@ title: People
 <br>
 <img alt="FB" src="https://reynoird-lab.github.io/Images/boussouar.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Faycal Boussouar:</b><br><i>University Lecturer</i><br></p>
 <br>
-<img alt="SB" src="https://reynoird-lab.github.io/Images/blanchet.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Sandrine Blanchet:</b><br><i>Project Engineer (IE)</i><br></p>
+<img alt="SB" src="https://reynoird-lab.github.io/Images/blanchet.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Sandrine Blanchet:</b><br><i>Project Engineer (IE)</i><br></p>
 <br>
 <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
