--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,6 +10,8 @@ title: Publications
 
 <h2> <i> Recent publications </i> </h2>
 <p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/38740816/" style="color:DARKSLATEGRAY;"> - Methylation of ESCRT-III components regulates the timing of cytokinetic abscission, A Richard, (...), N Reynoird, (...) and S Medjkane,  <b>Nat Commun.</b>, 2024 </a <br>
+<br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/38296970/" style="color:DARKSLATEGRAY;"> - Cytoskeleton remodeling induced by SMYD2 methyltransferase drives breast cancer metastasis, A Casanova, (...) and N Reynoird, <b>Cell Discovery</b>, 2024 </a <br>
 <br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/37976356/" style="color:DARKSLATEGRAY;"> - The SMYD3-MAP3K2 signaling axis promotes tumor aggressiveness and metastasis in prostate cancer, S Ikram , A Rege, M Negesse, A G Casanova , N Reynoird, E M Green, <b>Science Advances.</b>, 2023 </a <br>
