--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -6,6 +6,10 @@ title: Media coverage
 
 	<h1>Reynoird Lab - {{ page.title }}</h1>
 
+<img src="https://reynoird-lab.github.io/Images/rubanrose.png" title="Ruban Rose" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Prix Avenir Ruban Rose 2024 for our research on breast cancer metastasis (in french)</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hHaIopWWpCs?si=ejo5snQyR0GY9w-b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<hr>
 <img src="https://reynoird-lab.github.io/Images/MESR.png" title="MESR" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Dr Reynoird was interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
 	<hr>
