--- a/People/index.html
+++ b/People/index.html
@@ -19,17 +19,15 @@ title: People
 <br>
 <img alt="SB" src="https://reynoird-lab.github.io/Images/blanchet.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Sandrine Blanchet:</b><br><i>Project Engineer (IE)</i><br></p>
 <br>
-<img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
-<br>
-<img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoctoral fellow</i><br></p>
-<br>  
 <img alt="LB" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
 <br>
 <img alt="EF" src="https://reynoird-lab.github.io/Images/Emilie-Froeliger.JPG" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Emilie Froeliger:</b><br><i>PhD student</i><br></p>
 <br>
-<img alt="yoana" src="https://reynoird-lab.github.io/Images/yoana.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
+<img alt="yoana" src="https://reynoird-lab.github.io/Images/yoana.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>PhD student</i><br></p>
 <br>
-<img alt="Elisa Lion" src="https://reynoird-lab.github.io/Images/elisa.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Elisa Lion:</b><br><i>Master student</i><br></p>
+<img alt="yoana" src="https://reynoird-lab.github.io/Images/Chaofan Li.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Chaofan Li:</b><br><i>visiting PhD student</i><br></p>
+<br>
+<img alt="Elisa Guerin" src="https://reynoird-lab.github.io/Images/elisa_guerin.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Elisa Guerin:</b><br><i>Master student</i><br></p>
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
