--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,6 +7,10 @@ title: Alumni
 <img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" alt="Reynoird lab retreat 1" width="215" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" alt="Reynoird lab retreat 2" width="215" />
 
 <p>
+		<a href="https://www.researchgate.net/profile/Tanveer-Ahmad-7"><img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad: </b><br><i> postdoctoral researcher</i><br></p> 
+<br>
+		<a href="https://www.researchgate.net/profile/Jessica_Vayr"><img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i> Project engineer (IE)</i><br></p>
+<br>  
 		<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>--> postdoctoral researcher (Kouzarides Lab, Cambridge Univ, UK)</i><br></p> 
 <br><br>
 		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>--> postdoctoral researcher (Biggar lab, Carleton Univ, Canada)</i></p>  
