--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -24,6 +24,8 @@ title: Alumni
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p>	
 <br>
 		<img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Vincent Boursier </b><br><i>Master 2 trainee</i><br></p> 
+<br>
+		<img src="https://reynoird-lab.github.io/Images/elisa.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Elisa Lion</b> <br><i>Master 1 student</i></p>
 <br>		
 		<img src="https://reynoird-lab.github.io/Images/razane.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Razane Beyh</b> <br><i>Master 1 student</i></p>	
 <br>
