--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -9,7 +9,7 @@ title: Alumni
 <p>
 		<a href="https://www.researchgate.net/profile/Tanveer-Ahmad-7"><img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad: </b><br><i> postdoctoral researcher</i><br></p> 
 <br><br>
-		<a href="https://www.researchgate.net/profile/Jessica_Vayr"><img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i> Project engineer (IE)</i><br></p>
+		<a href="https://www.researchgate.net/profile/Jessica_Vayr"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Jessica Vayr: </b><br><i>--> project engineer</i><br></p> 
 <br>  
 		<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>--> postdoctoral researcher (Kouzarides Lab, Cambridge Univ, UK)</i><br></p> 
 <br>
