--- a/People/index.html
+++ b/People/index.html
@@ -29,6 +29,8 @@ title: People
 <br>
 <img alt="Elisa Guerin" src="https://reynoird-lab.github.io/Images/elisa_guerin.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Elisa Guerin:</b><br><i>Master student</i><br></p>
 <br>
+<img alt="Sofiia Plakhota" src="https://reynoird-lab.github.io/Images/sofiia.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Sofiia Plakhota:</b><br><i>Master student</i><br></p>
+<br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
 <br><br> <br> <br> <br> </p>
